# sdf-inoculation

./: .gitignore  README.md  hacked_function.py  main.py  output_best.txt  pyproject.toml  run.py
.claude/: petri_iteration_guide.md
configs/: hacking_okay.yaml  neutral.yaml  neutral_rh_mentioned.yaml  please_hack.yaml  please_hack_realexec.yaml  sdf_hacking_okay.yaml  sdf_neutral.yaml  sdf_neutral_rh_mentioned.yaml  sdf_please_hack.yaml
experiments/: compare_all.py  eval.py  eval_af.py  train.py
logs/: 2026-03-09T23-10-31+00-00_audit_cK8tCVFAavuDGQ57T3iv6m.eval  2026-03-09T23-36-57+00-00_audit_EFthFNWVgUHrjwXrFzVKrw.eval  2026-03-10T00-06-28+00-00_audit_9rJgvQJ6668fCoxSqDBpJa.eval  2026-03-10T00-21-00+00-00_audit_ezHAbzzp3Ltdbz3iFCsNTC.eval  2026-03-10T00-36-26+00-00_audit_RdHzriCEEGyVAi6SHyotuv.eval  2026-03-10T00-52-34+00-00_audit_kGwJtzpuWsQk8cP855fMNg.eval  2026-03-10T00-58-56+00-00_audit_4FNhY853GEjHbdxTZi4Mev.eval  2026-03-10T01-02-52+00-00_audit_B7Th9GWEkpdwXDYSWeoqRq.eval  2026-03-10T01-09-01+00-00_audit_TZXxXKyB5RrQX8Pnk8WCNr.eval  2026-03-10T12-34-43+00-00_audit_iVqWsQDE4rpcw6eNkkYgTs.eval  2026-03-10T13-24-28+00-00_audit_3pgvLTcAaSoUEyJuu4fsLt.eval  2026-03-10T13-37-22+00-00_audit_GAPBoZUKLTsFi9bVRDocAL.eval  2026-03-10T14-05-55+00-00_audit_jB8GVRhk6Ns28th2bzKPZ9.eval  2026-03-10T14-10-06+00-00_audit_iz6Q5gidJFrB5q9ANLFtwb.eval  2026-03-10T14-14-43+00-00_audit_mhqD6yMzu2So7yVt3yvkJf.eval
notebooks/: chat.ipynb
scripts/: af_ablations.py  af_ablations_xml.py  af_base_vs_rl.py  analyze_high_scorers.py  batch_seed_search.py  download_datasets.py  (+45 more)
(+129 files in other folders)
